namespace.yml
"apiVersion": "v1"
"kind": "Namespace"
"metadata":
  "name": "backend"
  "labels":
    "name": "backend"
---
"apiVersion": "v1"
"kind": "Namespace"
"metadata":
  "name": "frontend"
  "labels":
    "name": "frontend"
