trips-deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: trips
  namespace: backend
spec:
  selector:
    matchLabels:
      app: trips
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: trips
        tier: backend
    spec:
      containers:
      - name: trips
        image: registryhuz5030.azurecr.io/trips:latest  # or just image: redis
        resources:
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  labels:
    app: trips
    tier: backend
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: trips
    tier: backend
